--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,200;0,500;1,300&family=Montserrat:wght@200&display=swap");
+
+body,
+body * {
+  font-family: "Montserrat Alternates", sans-serif !important;
+}
 
 body {
   margin: 0;
@@ -9,6 +15,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+a,
+li {
+  align-self: auto;
+  justify-self: auto;
+  transition-duration: 300ms;
 }
 
 code {
