--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,200;0,500;1,300&family=Montserrat:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-body,
-body * {
-  font-family: "Montserrat Alternates", sans-serif !important;
+@layer base {
+  h1,
+  b {
+    font-family: climate crisis;
+  }
+  a {
+    font-family: montserrat;
+  }
+  p {
+    font-family: poppins;
+  }
+}
+
+h1 {
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(45, 3, 82);
+  background: radial-gradient(circle, rgb(23, 0, 44) 57%, rgb(75, 0, 62) 100%);
 }
 
 body::-webkit-scrollbar {
@@ -32,5 +45,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-
