--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Climate+Crisis:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300;500;700&display=swap");
 
 @layer base {
   h1,
@@ -12,7 +13,7 @@
     font-family: climate crisis;
   }
   a {
-    font-family: montserrat;
+    font-family: "Urbanist", sans-serif;
   }
   p {
     font-family: poppins;
